--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Pillow==9.3.0
 pyttsx3==2.90
 gTTS==2.3.1
 paddleocr==2.6.0.1
-langchain-google-genai==0.1.4
+langchain-google-genai==0.1.3
 paddlepaddle==2.5.1
 google-generativeai==0.3.0
+setuptools==68.0.0
